--- a/new-dti-website-redesign/package.json
+++ b/new-dti-website-redesign/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@octokit/rest": "^22.0.0",
     "clsx": "^2.1.1",
-    "next": "15.2.3",
+    "next": "^15.2.6",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
